--- a/index.html
+++ b/index.html
@@ -20,57 +20,175 @@
               <h4>KERORO</h4>
               <div class="accordion-cell-content">
                 <div class="card" style="width: 18rem;">
-                    <img src="..." class="card-img-top" alt="...">
-                    <div class="card-body">
-                      <h5 class="card-title">KERORO</h5>
-                      <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
-                    </div>
+                  <div class="margin">
+                   <h2 class="card-title">KERORO </h2>
+                   <h3 class="namej">ス<br>ミ<br>ス<br>キ</h3>
+                   <img src="media/smiski.jpg" class="card-img-top" alt="...">
+                   <div class="card-body">
+                     <div class="data">
+                      <p>1996 </p>
+                      <p>DREAMS CO</p>
+                      <p>JAPÓN </p>
+                     </div>
+                     <p class="card-text">Smiski are curious little creatures that love hiding in small spaces and corners of your room. Although they like to stay hidden, you might discover one at night as they misteriously glow in the dark.</p>
+                     <a href="#" class="btn btn-primary">Web Oficial</a> 
+                   </div>
                   </div>
+               </div>
               </div>
             </div>
             <div class="accordion-cell">
               <h4>TAMAGOTCHI</h4>
               <div class="accordion-cell-content">
-                <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</p>
+                <div class="card" style="width: 18rem;">
+                  <div class="margin">
+                   <h2 class="card-title">TAMAGOTCHI </h2>
+                   <h3 class="namej">た<br>ま<br>ご<br>っ<br>ち</h3>
+                   <img src="media/smiski.jpg" class="card-img-top" alt="...">
+                   <div class="card-body">
+                     <div class="data">
+                      <p>1996 </p>
+                      <p>DREAMS CO</p>
+                      <p>JAPÓN </p>
+                     </div>
+                     <p class="card-text">Smiski are curious little creatures that love hiding in small spaces and corners of your room. Although they like to stay hidden, you might discover one at night as they misteriously glow in the dark.</p>
+                     <a href="#" class="btn btn-primary">Web Oficial</a> 
+                   </div>
+                  </div>
+               </div>
               </div>
             </div>
             <div class="accordion-cell">
               <h4>ANIMAL CROSSING</h4>
               <div class="accordion-cell-content">
-                <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</p>
+                <div class="card" style="width: 18rem;">
+                  <div class="margin">
+                   <h2 class="card-title">ANIMAL CROSSING</h2>
+                   <h3 class="namej">ス<br>ミ<br>ス<br>キ</h3>
+                   <img src="media/smiski.jpg" class="card-img-top" alt="...">
+                   <div class="card-body">
+                     <div class="data">
+                      <p>1996 </p>
+                      <p>DREAMS CO</p>
+                      <p>JAPÓN </p>
+                     </div>
+                     <p class="card-text">Smiski are curious little creatures that love hiding in small spaces and corners of your room. Although they like to stay hidden, you might discover one at night as they misteriously glow in the dark.</p>
+                     <a href="#" class="btn btn-primary">Web Oficial</a> 
+                   </div>
+                  </div>
+               </div>
               </div>
             </div>
             <div class="accordion-cell">
               <h4>SMISKI</h4>
               <div class="accordion-cell-content">
-                <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</p>
+                <div class="card" style="width: 18rem;">
+                  <div class="margin">
+                   <h2 class="card-title">SMISKI</h2>
+                   <h3 class="namej">ス<br>ミ<br>ス<br>キ</h3>
+                   <img src="media/smiski.jpg" class="card-img-top" alt="...">
+                   <div class="card-body">
+                     <div class="data">
+                      <p>1996 </p>
+                      <p>DREAMS CO</p>
+                      <p>JAPÓN </p>
+                     </div>
+                     <p class="card-text">Smiski are curious little creatures that love hiding in small spaces and corners of your room. Although they like to stay hidden, you might discover one at night as they misteriously glow in the dark.</p>
+                     <a href="#" class="btn btn-primary">Web Oficial</a> 
+                   </div>
+                  </div>
+               </div>
               </div>
             </div>
             <div class="accordion-cell">
               <h4>PIKMIN</h4>
               <div class="accordion-cell-content">
-                <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</p>
+                <div class="card" style="width: 18rem;">
+                  <div class="margin">
+                   <h2 class="card-title">PIKMIN</h2>
+                   <h3 class="namej">ス<br>ミ<br>ス<br>キ</h3>
+                   <img src="media/smiski.jpg" class="card-img-top" alt="...">
+                   <div class="card-body">
+                     <div class="data">
+                      <p>1996 </p>
+                      <p>DREAMS CO</p>
+                      <p>JAPÓN </p>
+                     </div>
+                     <p class="card-text">Smiski are curious little creatures that love hiding in small spaces and corners of your room. Although they like to stay hidden, you might discover one at night as they misteriously glow in the dark.</p>
+                     <a href="#" class="btn btn-primary">Web Oficial</a> 
+                   </div>
+                  </div>
+               </div>
               </div>
             </div>
             <div class="accordion-cell">
                 <h4>KOBITO DUKAN</h4>
                 <div class="accordion-cell-content">
-                  <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</p>
+                  <div class="card" style="width: 18rem;">
+                    <div class="margin">
+                     <h2 class="card-title">KOBITO DUKAN </h2>
+                     <h3 class="namej">ス<br>ミ<br>ス<br>キ</h3>
+                     <img src="media/smiski.jpg" class="card-img-top" alt="...">
+                     <div class="card-body">
+                       <div class="data">
+                        <p>1996 </p>
+                        <p>DREAMS CO</p>
+                        <p>JAPÓN </p>
+                       </div>
+                       <p class="card-text">Smiski are curious little creatures that love hiding in small spaces and corners of your room. Although they like to stay hidden, you might discover one at night as they misteriously glow in the dark.</p>
+                       <a href="#" class="btn btn-primary">Web Oficial</a> 
+                     </div>
+                    </div>
+                 </div>
                 </div>
               </div>
               <div class="accordion-cell">
                 <h4>Mii´S</h4>
                 <div class="accordion-cell-content">
-                  <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</p>
+                  <div class="card" style="width: 18rem;">
+                    <div class="margin">
+                     <h2 class="card-title">Mii´S </h2>
+                     <h3 class="namej">ス<br>ミ<br>ス<br>キ</h3>
+                     <img src="media/smiski.jpg" class="card-img-top" alt="...">
+                     <div class="card-body">
+                       <div class="data">
+                        <p>1996 </p>
+                        <p>DREAMS CO</p>
+                        <p>JAPÓN </p>
+                       </div>
+                       <p class="card-text">Smiski are curious little creatures that love hiding in small spaces and corners of your room. Although they like to stay hidden, you might discover one at night as they misteriously glow in the dark.</p>
+                       <a href="#" class="btn btn-primary">Web Oficial</a> 
+                     </div>
+                    </div>
+                 </div>
                 </div>
               </div>
               <div class="accordion-cell">
                 <h4>KERORO & FRIENDS</h4>
                 <div class="accordion-cell-content">
-                  <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</p>
+                  <div class="card" style="width: 18rem;">
+                    <div class="margin">
+                     <h2 class="card-title">KERORO </h2>
+                     <h3 class="namej">ス<br>ミ<br>ス<br>キ</h3>
+                     <img src="media/smiski.jpg" class="card-img-top" alt="...">
+                     <div class="card-body">
+                       <div class="data">
+                        <p>1996 </p>
+                        <p>DREAMS CO</p>
+                        <p>JAPÓN </p>
+                       </div>
+                       <p class="card-text">Smiski are curious little creatures that love hiding in small spaces and corners of your room. Although they like to stay hidden, you might discover one at night as they misteriously glow in the dark.</p>
+                       <a href="#" class="btn btn-primary">Web Oficial</a> 
+                     </div>
+                    </div>
+                 </div>
                 </div>
               </div>
           </div>
+    </section>
+
+    <section style=" height: 20vh; margin: 3vw;">
+      
     </section>
    
 
