--- a/index.html
+++ b/index.html
@@ -14,6 +14,17 @@
     <header>
 
     </header>
+    <section id="HorScroll">
+      <div class="content">
+        <p>texto texto </p>
+      </div>
+      <div class="content">
+        <p>texto texto </p>
+      </div>
+      <div class="content">
+        <p>texto texto </p>
+      </div>
+    </section>
     <section id="acordeon">
         <div class="accordion">
             <div class="accordion-cell">
@@ -198,6 +209,11 @@
 
 <!-- JQ -->
 <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.7.1/jquery.min.js" integrity="sha512-v2CJ7UaYy4JwqLDIrZUI/4hqeoQieOmAZNXBeQyjo21dadnwR+8ZaIJVT8EE2iyI61OV8e6M8PP2/4hpQINQ/g==" crossorigin="anonymous" referrerpolicy="no-referrer"></script>
+<!-- Libreria GSAP Scroll horizontal  -->
+<script src="https://cdn.jsdelivr.net/npm/gsap@3.12.5/dist/gsap.min.js"></script>
+
+<script src="https://cdn.jsdelivr.net/npm/gsap@3.12.5/dist/ScrollTrigger.min.js"></script>
+
  <!-- nuestro js  -->
  <script src="js/script.js"></script>
 </body>
