--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>PRUEBAAAAAAS</title>
+    <title>Web Final</title>
 
     <!-- bootstrap  -->
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
@@ -15,6 +15,39 @@
     <header>
 
     </header>
+
+    <nav class="navbar navbar-expand-lg bg-body-tertiary sticky-top">
+        <div class="container-fluid">
+          <a class="navbar-brand" href="index.html">Selene</a>
+          <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarTogglerDemo02" aria-controls="navbarTogglerDemo02" aria-expanded="false" aria-label="Toggle navigation">
+            <i class="fa-solid fa-bars"></i>
+          </button>
+          <div class="collapse navbar-collapse" id="navbarTogglerDemo02">
+            <ul class="navbar-nav me-auto mb-2 mb-lg-0">
+                <li class="nav-item dropdown">
+                <a class="nav-link dropdown-toggle" href="horoscopo" role="button" data-bs-toggle="dropdown" aria-expanded="false">
+                  Horóscopo
+                </a>
+                <ul class="dropdown-menu">
+                  <li><a class="dropdown-item" href="#horoscopo">Horóscopo mensual</a></li>
+                  <li><a class="dropdown-item" href="#formulario">Descubre tu signo</a></li>
+                </ul>
+              </li>
+                <li class="nav-item">
+                    <a class="nav-link" href="mitos.html">Mitología</a>
+                  </li>
+              <li class="nav-item">
+                <a class="nav-link" href="#services">Servicios</a>
+              </li>
+              <li class="nav-item">
+                <a class="nav-link" href="#footer">Contáctanos</a>
+              </li>
+              
+            </ul>
+          </div>
+        </div>
+      </nav> 
+
     <section id="gallery">
         <div class="container py-5">
             <div class="row">
