--- a/index.html
+++ b/index.html
@@ -14,34 +14,35 @@
     <header>
 
     </header>
-    <section id="HorScroll">
-      <div class="content">
-        <p>texto texto </p>
-      </div>
-      <div class="content">
-        <p>texto texto </p>
-      </div>
-      <div class="content">
-        <p>texto texto </p>
-      </div>
-    </section>
+   <!-- Scroll horizontal -->
+<section id="ScrollContainer">
+  <div class="ScrollContent">
+    <p class="ScrollText">
+      Descubre los Personajes Icónicos de la Cultura Pop Japonesa, un recorrido lleno de magia, creatividad y nostalgia que ha dado forma a generaciones.
+    </p>
+  </div>
+</section>
+
+
+
+    
     <section id="acordeon">
         <div class="accordion">
             <div class="accordion-cell">
-              <h4>KERORO</h4>
+              <h4>GUDETAMA</h4>
               <div class="accordion-cell-content">
                 <div class="card" style="width: 18rem;">
                   <div class="margin">
-                   <h2 class="card-title">KERORO </h2>
-                   <h3 class="namej">ス<br>ミ<br>ス<br>キ</h3>
-                   <img src="media/smiski.jpg" class="card-img-top" alt="...">
+                   <h2 class="card-title">GUDETAMA </h2>
+                   <h3 class="namej">ぐ<br>で<br>た<br>ま</h3>
+                   <img src="media/Gudetama.jpg" class="card-img-top" alt="...">
                    <div class="card-body">
                      <div class="data">
-                      <p>1996 </p>
-                      <p>DREAMS CO</p>
+                      <p>2013</p>
+                      <p>SANRIO</p>
                       <p>JAPÓN </p>
                      </div>
-                     <p class="card-text">Smiski are curious little creatures that love hiding in small spaces and corners of your room. Although they like to stay hidden, you might discover one at night as they misteriously glow in the dark.</p>
+                     <p class="card-text">Conocido por ser un huevo frito perezoso y desmotivado. Desde su debut se ha convertido en un ícono cultural. Gudetama es famoso por su actitud vaga y su tendencia a quejarse de la vida, lo que lo hace entrañable para muchos.</p>
                      <a href="#" class="btn btn-primary">Web Oficial</a> 
                    </div>
                   </div>
@@ -55,14 +56,14 @@
                   <div class="margin">
                    <h2 class="card-title">TAMAGOTCHI </h2>
                    <h3 class="namej">た<br>ま<br>ご<br>っ<br>ち</h3>
-                   <img src="media/smiski.jpg" class="card-img-top" alt="...">
+                   <img src="media/tamagotchi.webp" class="card-img-top" alt="...">
                    <div class="card-body">
                      <div class="data">
                       <p>1996 </p>
-                      <p>DREAMS CO</p>
+                      <p>BANDAI</p>
                       <p>JAPÓN </p>
                      </div>
-                     <p class="card-text">Smiski are curious little creatures that love hiding in small spaces and corners of your room. Although they like to stay hidden, you might discover one at night as they misteriously glow in the dark.</p>
+                     <p class="card-text">Tamagotchi comenzó como un dispositivo en forma de huevo donde los jugadores cuidaban de una mascota virtual. Se popularizó en los 90, convirtiéndose en un fenómeno cultural y dando lugar a posteriores videojuegos y series.</p>
                      <a href="#" class="btn btn-primary">Web Oficial</a> 
                    </div>
                   </div>
@@ -75,16 +76,16 @@
                 <div class="card" style="width: 18rem;">
                   <div class="margin">
                    <h2 class="card-title">ANIMAL CROSSING</h2>
-                   <h3 class="namej">ス<br>ミ<br>ス<br>キ</h3>
-                   <img src="media/smiski.jpg" class="card-img-top" alt="...">
+                   <h3 class="namej">ど<br>う<br>ぶ<br>つ<br>の<br>森</h3>
+                   <img src="media/animalcrossing.jpg" class="card-img-top" alt="...">
                    <div class="card-body">
                      <div class="data">
-                      <p>1996 </p>
-                      <p>DREAMS CO</p>
+                      <p>2001 </p>
+                      <p>NINTENDO</p>
                       <p>JAPÓN </p>
                      </div>
-                     <p class="card-text">Smiski are curious little creatures that love hiding in small spaces and corners of your room. Although they like to stay hidden, you might discover one at night as they misteriously glow in the dark.</p>
-                     <a href="#" class="btn btn-primary">Web Oficial</a> 
+                     <p class="card-text">Dobutsu no Mori en Japón("Bosque de los animales"), es un videojuego de simulador donde un ser humano vive en un pueblo de animales antropomórficos. Es popular por sus personajes entrañables y su naturaleza relajante.</p>
+                     <a href="https://ac-pocketcamp.com/es-ES" class="btn btn-primary">Web Oficial</a> 
                    </div>
                   </div>
                </div>
@@ -97,14 +98,14 @@
                   <div class="margin">
                    <h2 class="card-title">SMISKI</h2>
                    <h3 class="namej">ス<br>ミ<br>ス<br>キ</h3>
-                   <img src="media/smiski.jpg" class="card-img-top" alt="...">
+                   <img src="media/smiski.webp" class="card-img-top" alt="...">
                    <div class="card-body">
                      <div class="data">
                       <p>1996 </p>
                       <p>DREAMS CO</p>
                       <p>JAPÓN </p>
                      </div>
-                     <p class="card-text">Smiski are curious little creatures that love hiding in small spaces and corners of your room. Although they like to stay hidden, you might discover one at night as they misteriously glow in the dark.</p>
+                     <p class="card-text">Figuras coleccionables de personajes de forma humanoides. Smiski se caracteriza por su apariencia tímida y curiosa que ha ganado popularidad como un objeto decorativo y coleccionable por su entrañable apariencia.</p>
                      <a href="#" class="btn btn-primary">Web Oficial</a> 
                    </div>
                   </div>
@@ -117,15 +118,15 @@
                 <div class="card" style="width: 18rem;">
                   <div class="margin">
                    <h2 class="card-title">PIKMIN</h2>
-                   <h3 class="namej">ス<br>ミ<br>ス<br>キ</h3>
-                   <img src="media/smiski.jpg" class="card-img-top" alt="...">
+                   <h3 class="namej">ピ<br>ク<br>ミ<br>ン</h3>
+                   <img src="media/pikmins.jpg" class="card-img-top" alt="...">
                    <div class="card-body">
                      <div class="data">
-                      <p>1996 </p>
-                      <p>DREAMS CO</p>
+                      <p>2001</p>
+                      <p>NINTENDO</p>
                       <p>JAPÓN </p>
                      </div>
-                     <p class="card-text">Smiski are curious little creatures that love hiding in small spaces and corners of your room. Although they like to stay hidden, you might discover one at night as they misteriously glow in the dark.</p>
+                     <p class="card-text">Pikmin es un videojuego de Nintendo donde los jugadores controlan a unas simpáticas criaturas. Desde su debut, se han convertido en un emblema de la compañía, apareciendo en varios títulos y ganando popularidad.</p>
                      <a href="#" class="btn btn-primary">Web Oficial</a> 
                    </div>
                   </div>
@@ -138,15 +139,15 @@
                   <div class="card" style="width: 18rem;">
                     <div class="margin">
                      <h2 class="card-title">KOBITO DUKAN </h2>
-                     <h3 class="namej">ス<br>ミ<br>ス<br>キ</h3>
-                     <img src="media/smiski.jpg" class="card-img-top" alt="...">
+                     <h3 class="namej">こ<br>び<br>と<br>づ<br>か<br>ん</h3>
+                     <img src="media/kobitos.jpg" class="card-img-top" alt="...">
                      <div class="card-body">
                        <div class="data">
-                        <p>1996 </p>
-                        <p>DREAMS CO</p>
+                        <p>2006</p>
+                        <p>NABATA TOSHITAKA</p>
                         <p>JAPÓN </p>
                        </div>
-                       <p class="card-text">Smiski are curious little creatures that love hiding in small spaces and corners of your room. Although they like to stay hidden, you might discover one at night as they misteriously glow in the dark.</p>
+                       <p class="card-text">Estos traviesos gnomos de jardín, se popularizaron con "The Illustrated Book of Kobitos" apareciendo después en juegos de la 3DS. Son muy populares por su apariencia inquietante kimo-kawaii ("feo-cute").</p>
                        <a href="#" class="btn btn-primary">Web Oficial</a> 
                      </div>
                     </div>
@@ -159,15 +160,15 @@
                   <div class="card" style="width: 18rem;">
                     <div class="margin">
                      <h2 class="card-title">Mii´S </h2>
-                     <h3 class="namej">ス<br>ミ<br>ス<br>キ</h3>
-                     <img src="media/smiski.jpg" class="card-img-top" alt="...">
+                     <h3 class="namej">ミ<br>ー</h3>
+                     <img src="media/miis.png" class="card-img-top" alt="...">
                      <div class="card-body">
                        <div class="data">
-                        <p>1996 </p>
-                        <p>DREAMS CO</p>
+                        <p>2006</p>
+                        <p>NINTENDO</p>
                         <p>JAPÓN </p>
                        </div>
-                       <p class="card-text">Smiski are curious little creatures that love hiding in small spaces and corners of your room. Although they like to stay hidden, you might discover one at night as they misteriously glow in the dark.</p>
+                       <p class="card-text">Los Miis son avatares personalizables de Nintendo, introducidos con el debut de la Wii. Su nombre, "Mii," deriva de la palabra inglesa "me" ("yo"). Desde entonces, son un emblema de los videojuegos de los 2000.</p>
                        <a href="#" class="btn btn-primary">Web Oficial</a> 
                      </div>
                     </div>
@@ -175,20 +176,20 @@
                 </div>
               </div>
               <div class="accordion-cell">
-                <h4>KERORO & FRIENDS</h4>
+                <h4>TORO & FRIENDS</h4>
                 <div class="accordion-cell-content">
                   <div class="card" style="width: 18rem;">
                     <div class="margin">
-                     <h2 class="card-title">KERORO </h2>
-                     <h3 class="namej">ス<br>ミ<br>ス<br>キ</h3>
-                     <img src="media/smiski.jpg" class="card-img-top" alt="...">
+                     <h2 class="card-title">TORO & FRIENDS</h2>
+                     <h3 class="namej">井<br>上<br>ト<br>ロ</h3>
+                     <img src="media/torofriends.jpg" class="card-img-top" alt="...">
                      <div class="card-body">
                        <div class="data">
-                        <p>1996 </p>
-                        <p>DREAMS CO</p>
+                        <p>1999 </p>
+                        <p>SONY</p>
                         <p>JAPÓN </p>
                        </div>
-                       <p class="card-text">Smiski are curious little creatures that love hiding in small spaces and corners of your room. Although they like to stay hidden, you might discover one at night as they misteriously glow in the dark.</p>
+                       <p class="card-text">Toro es la mascota de Sony en Japón. Apareció por primera vez en el videojuego Doko Demo Issyo. Desde entonces, Toro y sus amigos han sido parte de numerosos juegos de Sony, convirtiéndose en íconos culturales.</p>
                        <a href="#" class="btn btn-primary">Web Oficial</a> 
                      </div>
                     </div>
