--- a/index.html
+++ b/index.html
@@ -23,6 +23,13 @@
   </div>
 </section>
 
+<!-- aparece el texto  -->
+<section id="HorScroll">
+  <div class="content">
+    <p class="reveal">Descubre los Personajes Icónicos de la Cultura Pop Japonesa.</p>
+  </div>
+</section>
+
 
 
     
