--- a/index.html
+++ b/index.html
@@ -18,13 +18,18 @@
 <section id="ScrollContainer">
   <div class="ScrollContent">
     <p class="ScrollText">
-      Descubre los Personajes Icónicos de la Cultura Pop Japonesa, un recorrido lleno de magia, creatividad y nostalgia que ha dado forma a generaciones.
+      DESCUBRE LOS ICONOS DE LA CULTURA POP JAPONESA
+      <!-- un recorrido lleno de magia, creatividad y nostalgia que ha dado forma a generaciones. -->
     </p>
+    <div class="ScrollImageCont">
+      <img
+        class="ScrollImage" src="media/moñecos.png" alt=""/>
+    </div>
   </div>
 </section>
 
 <!-- aparece el texto  -->
-<section id="HorScroll">
+<section id="ApScroll">
   <div class="content">
     <p class="reveal">Descubre los Personajes Icónicos de la Cultura Pop Japonesa.</p>
   </div>
@@ -32,7 +37,7 @@
 
 
 
-    
+<!-- ACORDEON   -->
     <section id="acordeon">
         <div class="accordion">
             <div class="accordion-cell">
