--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Web Final</title>
+    <title>Pruebas</title>
 
     <!-- bootstrap  -->
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
@@ -16,9 +16,46 @@
 
     </header>
 
+  <nav class="navbar navbar-expand-lg bg-body-tertiary sticky-top">
+        <div class="container-fluid">
+          <a class="navbar-brand" href="index.html">90s Pop</a>
+          <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarTogglerDemo02" aria-controls="navbarTogglerDemo02" aria-expanded="false" aria-label="Toggle navigation">
+            <i class="fa-solid fa-bars"></i>
+          </button>
+          <div class="collapse navbar-collapse" id="navbarTogglerDemo02">
+            <ul class="navbar-nav me-auto mb-2 mb-lg-0">
+                <li class="nav-item dropdown">
+                <a class="nav-link dropdown-toggle" href="horoscopo" role="button" data-bs-toggle="dropdown" aria-expanded="false">
+                  Iconos
+                </a>
+                <ul class="dropdown-menu">
+                  <li><a class="dropdown-item" href="#horoscopo">Gudetama</a></li>
+                  <li><a class="dropdown-item" href="#formulario">Tamagotchi</a></li>
+                  <li><a class="dropdown-item" href="#formulario">Smiski</a></li>
+                  <li><a class="dropdown-item" href="#formulario">Pickmins</a></li>
+                  <li><a class="dropdown-item" href="#formulario">Kobito Ducan</a></li>
+                  <li><a class="dropdown-item" href="#formulario">Mii's</a></li>
+                  <li><a class="dropdown-item" href="#formulario">Animal Crossing</a></li>
+                  <li><a class="dropdown-item" href="#formulario">Toro & Friends</a></li>
+                </ul>
+              </li>
+                <li class="nav-item">
+                    <a class="nav-link" href="#gallery">General</a>
+                  </li>
+              <li class="nav-item">
+                <a class="nav-link" href="#services">Conócelos</a>
+              </li>
+              <li class="nav-item">
+                <a class="nav-link" href="#footer">Contáctanos</a>
+              </li>
+              
+            </ul>
+          </div>
+        </div>
+      </nav>   
+
 <section id="gallery">
         <div class="container text-center">
-
             
             <div class="gallery-item2 col">
                     <img src="media/gudetamac2.jpg" alt="">
@@ -72,14 +109,67 @@
 
     </section>
 
+    <div id="particles-js">
+      <h3 data-aos="fade-down" data-aos-duration="1500">90's Pop Culture</h3>
+  </div>
+
+    <footer>
+      <h1 data-aos="fade-down" data-aos-duration="1500">90's Pop Culture</h1>
+      <div data-aos="fade-up" data-aos-duration="1500" class="iconos">
+          <div> <a href="https://www.instagram.com/" target="instagram"><i class="fa-brands fa-instagram fa-2x"></i></a>
+          </div>
+  
+          <div> <a href="https://www.behance.net/" target="Behance"><i class="fa-brands fa-behance fa-2x"></i></a>
+          </div>
+  
+          <div> <a href="https://twitter.com/" target="Twitter"><i class="fa-brands fa-twitter fa-2x"></i></a></div>
+  
+          <div> <a href="https://www.pinterest.es/" target="Pinterest"><i class="fa-brands fa-pinterest fa-2x"></i></a>
+          </div>
+      </div>
+      <div class="datos">
+          <div data-aos="fade-up" data-aos-duration="1500" class="legal">
+              <h4>90's Pop Culture</h4>
+              <p>CONDICIONES </p>
+              <p>EDICIONES ANTERIORES</p>
+              <p>FAQS</p>
+          </div>
+          <div data-aos="fade-up" data-aos-duration="1500" class="legal">
+              <h4>Legal</h4>
+              <p>AVISO LEGAL</p>
+              <p>RGPD</p>
+              <p>PRIVACIDAD</p>
+              <p>COOKIES</p>
+          </div>
+          <div data-aos="fade-up" data-aos-duration="1500" class="legal">
+              <h4>Contacto</h4>
+              <p>GENERAL</p>
+              <p>PRENSA</p>
+              <p>PATROCINADORES</p>
+              <p>TRABAJA CON NOSOTROS</p>
+          </div>
+      </div>
+      <div class="copy">
+        90's Pop Culture &copy; | All Rights Reserved
+      </div>
+  
+  </footer>
+
 
 
 <!-- JS de bootstrap  -->
 <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz" crossorigin="anonymous"></script>
 
+<script src="http://cdn.jsdelivr.net/particles.js/2.0.0/particles.min.js"></script>
+<!-- stats.js lib -->
+<script src="http://threejs.org/examples/js/libs/stats.min.js"></script>
+
 <!-- JQ -->
 <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.7.1/jquery.min.js" integrity="sha512-v2CJ7UaYy4JwqLDIrZUI/4hqeoQieOmAZNXBeQyjo21dadnwR+8ZaIJVT8EE2iyI61OV8e6M8PP2/4hpQINQ/g==" crossorigin="anonymous" referrerpolicy="no-referrer"></script>
  <!-- nuestro js  -->
  <script src="js/script.js"></script>
+
+ 
+
 </body>
 </html>
