--- a/index.html
+++ b/index.html
@@ -3,8 +3,8 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Pruebas</title>
-    <link rel="icon" href="media/4pointStar.svg" type="image/x-icon">
+    <title>Web Final</title>
+    <link rel="icon" href="media/favicon.svg" type="image/x-icon">
 
     <!-- fontawesome     -->
 <script src="https://kit.fontawesome.com/d6cf5c9a82.js" crossorigin="anonymous"></script>
