--- a/index.html
+++ b/index.html
@@ -123,9 +123,16 @@
 
     </section>
 
-    <div id="particles-js">
-      <h3 data-aos="fade-down" data-aos-duration="1500">90's Pop Culture</h3>
-  </div> 
+     <!-- PARTCILES -->
+
+  <div id="particles-js">
+    <h3 data-aos="zoom-in" data-aos-duration="1500">¿Quieres saber más?</h3>
+    <div class="jeje position-absolute bottom-0 start-50 translate-middle-x">
+      <a href="mitos.html">
+        <button type="button" class="btn">DESCUBRE</button>
+      </a>
+   </div>
+  </div>
 
     <footer>
       <h1 data-aos="fade-down" data-aos-duration="1500">90's Pop Culture</h1>
@@ -143,7 +150,7 @@
       </div>
       <div class="datos">
           <div data-aos="fade-up" data-aos-duration="1500" class="legal">
-              <h4>90's Pop Culture</h4>
+              <h4>90's Culture</h4>
               <p>CONDICIONES </p>
               <p>EDICIONES ANTERIORES</p>
               <p>FAQS</p>
