--- a/index.html
+++ b/index.html
@@ -16,26 +16,22 @@
 </head>
 <body>
   
-  <header>
-    
+  <header >
+    <h1 class="big-text">PERSONAJES ICÓNICOS</h1>
+    <div id="ar-container">
+      <img src="media/kobitodukan.png" alt="" class="arrastra">
+      <img src="media/kuro.png" alt="" class="arrastra" >
+      <img src="media/gatoanimalcrossing.png" alt="" class="arrastra" >
+      <img src="media/morado.png" alt="" class="arrastra" >
+      <img src="media/smiskiw.png" alt="" class="arrastra" >
+      <img src="media/gudetamaaa.png" alt="" class="arrastra" >
+      <img src="media/smiskii.png" alt="" class="arrastra" >
+      <img src="media/taagotchi.png" alt="" class="arrastra" >
+    </div>
+      
   </header>
   
-  
-  <!-- Scroll horizontal -->
-  <section id="ScrollContainer">
-    <div class="ScrollContent">
-      <p class="ScrollText">
-        DESCUBRE LOS ICONOS DE LA CULTURA POP JAPONESA
-        <!-- un recorrido lleno de magia, creatividad y nostalgia que ha dado forma a generaciones. -->
-      </p>
-      <div class="ScrollImageCont">
-        <img
-        class="ScrollImage" src="media/moñecos.png" alt=""/>
-      </div>
-    </div>
-  </section>
-
-   <!-- Menú -->
+  <!-- Menú -->
 
   <nav class="navbar navbar-expand-lg bg-body-tertiary sticky-top">
         <div class="container-fluid">
@@ -75,6 +71,21 @@
         </div>
       </nav>   
 
+  <!-- Scroll horizontal -->
+  <section id="ScrollContainer">
+    <div class="ScrollContent">
+      <p class="ScrollText">
+        DESCUBRE LOS ICONOS DE LA CULTURA POP JAPONESA
+        <!-- un recorrido lleno de magia, creatividad y nostalgia que ha dado forma a generaciones. -->
+      </p>
+      <div class="ScrollImageCont">
+        <img
+        class="ScrollImage" src="media/moñecos.png" alt=""/>
+      </div>
+    </div>
+  </section>
+
+   
 <!-- aparece el texto  -->
 <section id="ApScroll">
   <div class="content">
