Added Cargo Site

--- a/index.html
+++ b/index.html
@@ -455,7 +455,7 @@
     <h3 data-aos="zoom-in" data-aos-duration="1500">¿Quieres saber más?</h3>
     <div class="jeje position-absolute bottom-0 start-50 translate-middle-x">
       <a href="mitos.html">
-        <button type="button" class="btn">DESCUBRE</button>
+        <button onclick="https://popculturejapan.cargo.site/" type="button" class="btn">DESCUBRE</button>
       </a>
    </div>
   </div>
