Arreglo link Cargo

--- a/index.html
+++ b/index.html
@@ -456,8 +456,8 @@
   <div id="particles-js">
     <h3 data-aos="zoom-in" data-aos-duration="1500">¿Quieres saber más?</h3>
     <div class="jeje position-absolute bottom-0 start-50 translate-middle-x">
-      <a href="mitos.html">
-        <button onclick="https://popculturejapan.cargo.site/" type="button" class="btn">DESCUBRE</button>
+      <a href="https://popculturejapan.cargo.site/">
+        <button type="button" class="btn">DESCUBRE</button>
       </a>
    </div>
   </div>
