responsive galeria FINAL

--- a/index.html
+++ b/index.html
@@ -42,18 +42,19 @@
           <div class="collapse navbar-collapse" id="navbarTogglerDemo02">
             <ul class="navbar-nav me-auto mb-2 mb-lg-0">
                 <li class="nav-item dropdown">
-                <a class="nav-link dropdown-toggle" href="horoscopo" role="button" data-bs-toggle="dropdown" aria-expanded="false">
+                <a class="nav-link dropdown-toggle" href="acordeon" role="button" data-bs-toggle="dropdown" aria-expanded="false">
                   Iconos
                 </a>
                 <ul class="dropdown-menu">
-                  <li><a class="dropdown-item" href="#horoscopo">Gudetama</a></li>
-                  <li><a class="dropdown-item" href="#formulario">Tamagotchi</a></li>
-                  <li><a class="dropdown-item" href="#formulario">Smiski</a></li>
-                  <li><a class="dropdown-item" href="#formulario">Pickmins</a></li>
-                  <li><a class="dropdown-item" href="#formulario">Kobito Ducan</a></li>
-                  <li><a class="dropdown-item" href="#formulario">Mii's</a></li>
-                  <li><a class="dropdown-item" href="#formulario">Animal Crossing</a></li>
-                  <li><a class="dropdown-item" href="#formulario">Toro & Friends</a></li>
+                  <li><a class="dropdown-item" href="#acordeon">Gudetama</a></li>
+                  <li><a class="dropdown-item" href="#acordeon">Tamagotchi</a></li>
+                  <li><a class="dropdown-item" href="#acordeon">Smiski</a></li>
+                  <li><a class="dropdown-item" href="#acordeon">Pickmins</a></li>
+                  <li><a class="dropdown-item" href="#acordeon">Kobito Ducan</a></li>
+                  <li><a class="dropdown-item" href="#acordeon">Mii's</a></li>
+                  <li><a class="dropdown-item" href="#acordeon">Animal Crossing</a></li>
+                  <li><a class="dropdown-item" href="#acordeon">Toro & Friends</a></li>
+                  <li><a class="dropdown-item" href="#acordeon">Estilo de los 90</a></li>
                 </ul>
               </li>
                 <li class="nav-item">
@@ -454,9 +455,9 @@
      <!-- PARTCILES -->
 
   <div id="particles-js">
-    <h3 data-aos="zoom-in" data-aos-duration="1500">¿Quieres saber más?</h3>
+    <h3 data-aos="zoom-in" data-aos-duration="1500">Conoce el estilo de los 90!</h3>
     <div class="jeje position-absolute bottom-0 start-50 translate-middle-x">
-      <a href="mitos.html">
+      <a href=" https://popculturejapan.cargo.site/" target="Pop Culture Japan">
         <button type="button" class="btn">DESCUBRE</button>
       </a>
    </div>
@@ -475,6 +476,7 @@
   
           <div> <a href="https://www.pinterest.es/" target="Pinterest"><i class="fa-brands fa-pinterest fa-2x"></i></a>
           </div>
+         
       </div>
       <div class="datos">
           <div data-aos="fade-up" data-aos-duration="1500" class="legal">
