particles funciona por favor

--- a/index.html
+++ b/index.html
@@ -519,9 +519,15 @@
 <!-- JS de bootstrap  -->
 <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz" crossorigin="anonymous"></script>
 
+<!-- stats.js lib PARTICLES
 <script src="http://cdn.jsdelivr.net/particles.js/2.0.0/particles.min.js"></script>
-<!-- stats.js lib -->
-<script src="http://threejs.org/examples/js/libs/stats.min.js"></script>
+<script src="http://threejs.org/examples/js/libs/stats.min.js"></script>-->
+
+<!--PARTICLES-->
+<script src="js/particles.min.js"></script>
+<!-- <script src="
+https://cdn.jsdelivr.net/npm/particles.js@2.0.0/particles.min.js
+"></script> -->
 
 <!-- JQ -->
 <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.7.1/jquery.min.js" integrity="sha512-v2CJ7UaYy4JwqLDIrZUI/4hqeoQieOmAZNXBeQyjo21dadnwR+8ZaIJVT8EE2iyI61OV8e6M8PP2/4hpQINQ/g==" crossorigin="anonymous" referrerpolicy="no-referrer"></script>
