--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Web Final</title>
+    <title>90´s Pop</title>
     <link rel="icon" href="media/favicon.svg" type="image/x-icon">
 
     <!-- fontawesome     -->
